fix the order history details and user profile modyfying for the first time